# ACPs_Agent2

./: .gitignore  README.md
docs/: plan.md  需求分析.md
partner/: README.md  pyproject.toml  requirements.txt
partner/atr/: acps-cli.toml  acs.json
partner/scripts/: atr_issue_cert.ps1  atr_register.ps1  test_remote_rpc.py  test_remote_rpc_acps.py  verify_handlers.py
partner/src/partner_agent/: __init__.py  app.py  brain.py  chat_service.py  discovery_client.py  handlers.py  human_api.py  leader.py  leader_api.py  memory.py  settings.py
partner/src/partner_agent/core/: __init__.py  task_execution_manager.py
partner/tests/: conftest.py  test_chat_service.py  test_discovery_client.py  test_handlers.py  test_human_api.py  test_leader.py  test_memory.py
